src/adguard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard
  namespace: adguard
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: { app: adguard }
  template:
    metadata:
      labels: { app: adguard }
    spec:
      hostNetwork: true
      nodeSelector:
        name: dwight
      containers:
        - name: adguard
          image: adguard/adguardhome:latest
          args: ["--no-check-update"]
          ports:
            - name: dns-udp
              containerPort: 53
              protocol: UDP
            - name: dns-tcp
              containerPort: 53
              protocol: TCP
            - name: dot
              containerPort: 853
              protocol: TCP
            - name: doq
              containerPort: 784
              protocol: UDP
            - name: web
              containerPort: 3000
          volumeMounts:
            - name: work
              mountPath: /opt/adguardhome/work
            - name: conf
              mountPath: /opt/adguardhome/conf
      volumes:
        - name: adguard-config
          configMap:
            name: adguard-config
            items:
              - key: AdGuardHome.yaml
                path: AdGuardHome.yaml
        - name: work
          persistentVolumeClaim:
            claimName: adguard-work
        - name: conf
          persistentVolumeClaim:
            claimName: adguard-conf
