src/adguard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-ui
  namespace: adguard
spec:
  type: NodePort
  selector:
    app: adguard
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      nodePort: 32000
